# cmake

./: .gitignore  2.变量和基本类型
ch01/: CMakeLists.txt  CMakePresets.json  hello.cpp
project/: CMakeLists.txt
project_lib/: CMakeLists.txt
project_lib_use/: CMakeLists.txt
project_lib_use/lib2/: libprog.dylib
project_lib_use/src/: main.cpp
